# openmsx4android

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.MD  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/openmsx/openmsx4android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/openmsx/: index.txt
app/src/main/assets/openmsx/share/shaders/: default.frag  default.vert  fill.frag  fill.vert  hq.frag  hq.vert  monitor3D.frag  monitor3D.vert  rgb.frag  scale2x.frag  scale2x.vert  simple.frag  simple.vert  tv.frag
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/cpp/SDL_ttf/: CMakeLists.txt
app/src/main/cpp/openmsx/share/shaders/: monitor3D.vert
app/src/main/cpp/openmsx/src/: Printer.cc  Reactor.cc  Reactor.hh
app/src/main/cpp/openmsx/src/console/: OSDText.cc  OSDText.hh
app/src/main/cpp/openmsx/src/events/: InputEventGenerator.cc  InputEventGenerator.hh
app/src/main/cpp/openmsx/src/file/: FileOperations.cc
app/src/main/cpp/openmsx/src/imgui/: ImGuiLayer.cc  ImGuiManager.cc  ImGuiManager.hh  ImGuiOsdIcons.cc
app/src/main/cpp/openmsx/src/input/: EventDelay.cc  Keyboard.cc
app/src/main/cpp/openmsx/src/sound/: BlipBuffer.cc
app/src/main/cpp/openmsx/src/video/: DummyVideoSystem.cc  GLImage.cc  GLUtil.cc  GLUtil.hh  OutputSurface.hh  PostProcessor.cc  SDLVideoSystem.cc  VisibleSurface.cc
app/src/main/cpp/openmsx/src/video/scalers/: GLHQScaler.cc
app/src/main/cpp/openmsx_android/: openmsx_entry.cpp  openmsx_entry.h
app/src/main/cpp/openmsx_generated/: Version.ii  build-info.cc  build-info.hh  components.hh  systemfuncs.hh
app/src/main/cpp/tcl/unix/: Makefile  config.status  tcl.pc  tclConfig.sh
app/src/main/cpp/tcl/unix/dltest/: Makefile
app/src/main/java/com/openmsx/openmsx4android/: MainActivity.kt  OpenMSXPathUtil.java
app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  OpenMSX4AndroidSDLActivity.java  SDLActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/openmsx/openmsx4android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
